<resources>
    <string name="app_name">Calculator</string>
    <string name="Number0">0</string>
    <string name="Number1">1</string>
    <string name="Number2">2</string>
    <string name="Number3">3</string>
    <string name="Number4">4</string>
    <string name="Number5">5</string>
    <string name="Number6">6</string>
    <string name="Number7">7</string>
    <string name="Number8">8</string>
    <string name="Number9">9</string>

    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="Multiple">x</string>
    <string name="Division">÷</string>
    <string name="Result">=</string>
    <string name="Clear">C</string>
    <string name="AC">AC</string>
    <string name="close">)</string>
    <string name="open">(</string>
    <string name="floating">,</string>

</resources>