<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/exp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:padding="23dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/resultShow"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_weight="1"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/Clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E60808"
            android:text="@string/Clear"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/open"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E60808"
            android:text="@string/open"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E60808"
            android:text="@string/close"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/Division"
            style="@style/MyStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#EC0606"
            android:text="@string/Division"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/Number7"
            style="@style/MyStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number7"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/Number8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number8"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Number9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number9"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Multiple"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E60808"
            android:text="@string/Multiple"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/Number4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number4"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/Number5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number5"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Number6"
            style="@style/MyStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number6"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/Subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E60808"
            android:textColor="#FFFFFF"
            android:text="@string/Subtract"
            android:textSize="50sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/Number1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number1"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/Number2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number2"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Number3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number3"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E60808"
            android:text="@string/Add"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/Number0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/Number0"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/floating_point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/floating"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/AC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#04A2B6"
            android:text="@string/AC"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E60808"
            android:text="@string/Result"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>